--- a/app/views/spree/admin/currencies/index.html.erb
+++ b/app/views/spree/admin/currencies/index.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% content_for :page_actions do %>
-  <%= button_link_to Spree.t(:apply_to_all_products), new_object_url, { :class => "btn-danger", :icon => 'retweet', :id => 'admin_apply_currency', data: {confirm: 'Are you sure apply exchange rate to all products? This will take a while for processing.'} }  %>
+  <%= button_link_to Spree.t(:apply_to_all_products), new_object_url, { :class => "btn-success", :icon => 'refresh', :id => 'admin_apply_currency', data: {confirm: 'Are you sure apply exchange rate to all products? This will take a while for processing.'} }  %>
   <%#= button_link_to Spree.t(:new_currency), new_object_url, { :class => "btn-success", :icon => 'add', :id => 'admin_new_currency' } %>
 <% end if can? :create, Spree::Currency %>
 
@@ -33,6 +33,9 @@
         <td class="actions actions-2 text-right">
           <%= link_to_edit(currency, :no_text => true) if can? :edit, currency %>
           <%= link_to_delete(currency, :no_text => true) if (can? :delete, currency) && currency.name != Spree::Config['currency'] %>
+          <%= link_to spree.apply_admin_currency_path(currency), class: 'btn btn-success btn-sm icon-link with-tip action-edit no-text', method: :post, data: {'original-title' => 'Apply', :confirm => "Are you sure to apply exchange rate for this currency?"} do  %>
+            <span class="icon icon-refresh"></span>
+          <% end %>
         </td>
       </tr>
     <% end %>
