--- a/app/views/spree/admin/prices/index.html.erb
+++ b/app/views/spree/admin/prices/index.html.erb
@@ -1,3 +1,9 @@
+<% content_for :page_actions do %>
+  <% if can?(:create, Spree::Product) %>
+    <%= button_link_to 'Apply Exchange Rate', apply_admin_product_prices_path(@product), { class: "btn-success", icon: 'refresh', id: 'admin_apply_product_exchange_rate', method: :post, data: {confirm: 'WARNING: All secondary prices of this product will be re-calculate based on exchange rate. Are you sure to proceed?'} } %>
+  <% end %>
+<% end %>
+
 <%= render 'spree/admin/shared/product_tabs', current: 'Prices' %>
 
 <form>
